--- a/ledger-smb/branches/1.3.18-2/debian/po/fr.po
+++ b/ledger-smb/branches/1.3.18-2/debian/po/fr.po
@@ -1,27 +1,26 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Translation of ledgersmb debconf templates to French..
+# Copyright (C) 2012, French l10n Team <debian-l10n-french@lists.debian.org>
+# This file is distributed under the same license as the ledgersmb package.
+# Julien Patriarca <patriarcaj@gmail.com>, 2012.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: ledgersmb\n"
 "Report-Msgid-Bugs-To: ledgersmb@packages.debian.org\n"
 "POT-Creation-Date: 2012-06-07 08:21+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2012-06-13 17:31+0100\n"
+"Last-Translator: Julien Patriarca <patriarcaj@gmail.com>\n"
+"Language-Team: FRENCH <debian-l10n-fr@lists.debian.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #. Type: string
 #. Description
 #: ../templates:2001
 msgid "Database administrative user login:"
-msgstr ""
+msgstr "Identifiant de l'administrateur de la base de données : "
 
 #. Type: string
 #. Description
@@ -31,12 +30,15 @@ msgid ""
 "login is needed for the administrative web user interface, typically at "
 "http://localhost/ledgersmb/setup.pl."
 msgstr ""
+"Veuillez indiquer l'identifiant de l'administrateur LedgerSMB. Cet "
+"identifiant est nécessaire pour accéder à l'interface web d'administration, "
+"généralement située à l'adresse http://localhost/ledgersmb/setup.pl."
 
 #. Type: password
 #. Description
 #: ../templates:3001
 msgid "Database administrative user password:"
-msgstr ""
+msgstr "Mot de passe de l'administrateur de la base de données : "
 
 #. Type: password
 #. Description
@@ -46,12 +48,15 @@ msgid ""
 "This password is needed for the administrative web user interface, typically "
 "at http://localhost/ledgersmb/setup.pl."
 msgstr ""
+"Veuillez indiquer le mot de passe de l'administrateur LedgerSMB. Ce mot de "
+"passe est nécessaire pour accéder à l'interface web d'administration, "
+"généralement située à l'adresse http://localhost/ledgersmb/setup.pl."
 
 #. Type: boolean
 #. Description
 #: ../templates:4001
 msgid "Configure LedgerSMB automatically?"
-msgstr ""
+msgstr "Faut-il configurer LedgerSMB automatiquement ?"
 
 #. Type: boolean
 #. Description
@@ -60,6 +65,9 @@ msgid ""
 "The configuration program for the package can automatically configure some "
 "aspects of LedgerSMB, such as the LedgerSMB database user."
 msgstr ""
+"Le programme de configuration du paquet peut paramétrer automatiquement "
+"certains aspects de LedgerSMB, comme l'utilisateur de la base de données de "
+"LedgerSMB."
 
 #. Type: boolean
 #. Description
@@ -68,3 +76,5 @@ msgid ""
 "More general information about the initial configuration of the application "
 "can be found in /usr/share/doc/ledgersmb/README.Debian."
 msgstr ""
+"Des renseignements supplémentaires sur la configuration initiale de "
+"l'application sont disponibles dans /usr/share/doc/ledgersmb/README.Debian."
