--- a/ledger-smb/branches/1.3.18-2/debian/po/sk.po
+++ b/ledger-smb/branches/1.3.18-2/debian/po/sk.po
@@ -1,27 +1,26 @@
-# SOME DESCRIPTIVE TITLE.
+# Slovak translation of ledgersmb debconf templates.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# This file is distributed under the same license as the ledgersmb package.
+# Ivan Masár <helix84@centrum.sk>, 2012.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: ledgersmb\n"
 "Report-Msgid-Bugs-To: ledgersmb@packages.debian.org\n"
 "POT-Creation-Date: 2012-06-07 08:21+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2012-06-22 09:20+0100\n"
+"Last-Translator: Ivan Masár <helix84@centrum.sk>\n"
+"Language-Team: Slovak <debian-l10n-slovak@lists.debian.org>\n"
+"Language: sk\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #. Type: string
 #. Description
 #: ../templates:2001
 msgid "Database administrative user login:"
-msgstr ""
+msgstr "Prihlasovacie meno správcu databázy:"
 
 #. Type: string
 #. Description
@@ -31,12 +30,15 @@ msgid ""
 "login is needed for the administrative web user interface, typically at "
 "http://localhost/ledgersmb/setup.pl."
 msgstr ""
+"Prosím, zadajte prihlasovacie meno správcu databázy LedgerSMB. Toto "
+"prihlasovacie meno je potrebné pre webové používateľské rozhranie, typicky "
+"sa nachádzajúce na http://localhost/ledgersmb/setup.pl."
 
 #. Type: password
 #. Description
 #: ../templates:3001
 msgid "Database administrative user password:"
-msgstr ""
+msgstr "Heslo správcu databázy:"
 
 #. Type: password
 #. Description
@@ -46,12 +48,15 @@ msgid ""
 "This password is needed for the administrative web user interface, typically "
 "at http://localhost/ledgersmb/setup.pl."
 msgstr ""
+"Prosím, zadajte heslo správcu databázy LedgerSMB. Toto heslo je potrebné pre "
+"webové používateľské rozhranie, typicky sa nachádzajúce na http://localhost/"
+"ledgersmb/setup.pl."
 
 #. Type: boolean
 #. Description
 #: ../templates:4001
 msgid "Configure LedgerSMB automatically?"
-msgstr ""
+msgstr "Nakonfigurovať LedgerSMB automaticky?"
 
 #. Type: boolean
 #. Description
@@ -60,6 +65,8 @@ msgid ""
 "The configuration program for the package can automatically configure some "
 "aspects of LedgerSMB, such as the LedgerSMB database user."
 msgstr ""
+"Konfiguračný program balíka dokáže automaticky nastaviť niektoré aspekty "
+"LedgerSMB ako používateľ databázy LedgerSMB."
 
 #. Type: boolean
 #. Description
@@ -68,3 +75,5 @@ msgid ""
 "More general information about the initial configuration of the application "
 "can be found in /usr/share/doc/ledgersmb/README.Debian."
 msgstr ""
+"Ďalšie informácie o prvotnej konfigurácii aplikácie nájdete v súbore /usr/"
+"share/doc/ledgersmb/README.Debian."
