--- a/ledger-smb/branches/1.3.18-2/debian/changelog
+++ b/ledger-smb/branches/1.3.18-2/debian/changelog
@@ -1,4 +1,4 @@
-[21~ledgersmb (1.3.18-2~1) UNRELEASED; urgency=low
+ledgersmb (1.3.18-2~1) UNRELEASED; urgency=low
 
   * Debconf templates and debian/control reviewed by the debian-l10n-
     english team as part of the Smith review project. (Closes: #674023)
