--- a/ledger-smb/branches/1.3.18-2/debian/changelog
+++ b/ledger-smb/branches/1.3.18-2/debian/changelog
@@ -1,4 +1,4 @@
-ledgersmb (1.3.18-2~2) UNRELEASED; urgency=low
+ledgersmb (1.3.18-2) unstable; urgency=low
 
   * Debconf templates and debian/control reviewed by the debian-l10n-
     english team as part of the Smith review project. (Closes: #674023)
@@ -18,7 +18,7 @@ ledgersmb (1.3.18-2~2) UNRELEASED; urgency=low
     - Swedish (Martin Bagge / brother). (Closes: #676556)
   * Update debian/watch to exclude development snapshots. (Closes: #677612)
 
- -- Robert James Clay <jame@rocasa.us>  Sat,  7 Jul 2012 09:16:04 -0400
+ -- Robert James Clay <jame@rocasa.us>  Sat, 07 Jul 2012 20:21:58 -0400
 
 ledgersmb (1.3.18-1) unstable; urgency=low
 
