--- a/debian/changelog
+++ b/debian/changelog
@@ -1,24 +1,24 @@
-ledgersmb (1.3.19-1~1) UNRELEASED; urgency=low
+ledgersmb (1.3.18-2) unstable; urgency=low
 
-  * New upstream release.
-    - Fixed discarded input/bad label on 1.2 upgrade screen. (Closes: #677098)
-  * Changes to debian/patches/:
-    - Updated 05_confdir.patch for the new fs_cssdir configuration item.
-  * Changes for debian/control:
-    - Update the URL in the Vcs-Browser entry.
-  * Changes for debian/ledgersmb.preinst:
-    - Add setting of an old_version variable for use in the script.
-    - Move templates/* to /var/lib/ledgersmb if necessary during upgrade.
-    - Remove old ledgersmb css and/or templates symbolic links as neccessary.
-  * Changes for debian/ledgersmb.postinst:
-    - Update source path for when creating working css & templates directories.
-  * Remove setting symbolic link to /var/lib/ledgersmb/css in ledgersmb.links.
+  * Debconf templates and debian/control reviewed by the debian-l10n-
+    english team as part of the Smith review project. (Closes: #674023)
+  * Debconf translation updates:
+    - Brazilian Portuguese (Adriano Rafael Gomes). (Closes: #677793)
+    - Czech (Michal Simunek). (Closes: #676494)
+    - Danish (Joe Dalton). (Closes: #678841)
+    - Galician (Jorge Barreiro). (Closes: #678597)
+    - French (Julien Patriarca). (Closes: #677953)
+    - German (Erik Pfannenstein). (Closes: #678547)
+    - Italian (Beatrice Torracca). (Closes: #678442)
+    - Polish (Michał Kułach). (Closes: #676511)
+    - Portuguese (Miguel Figueiredo). (Closes: #677839)
+    - Russian (Yuri Kozlov). (Closes: #676662)
+    - Slovak (Ivan Masár). (Closes: #678488)
+    - Spanish; (Camaleón). (Closes: #678265)
+    - Swedish (Martin Bagge / brother). (Closes: #676556)
   * Update debian/watch to exclude development snapshots. (Closes: #677612)
-  * Move installation of css & templates directories from ledgersmb.examples
-    to ledgersmb.install.
-  * Update path for the distribution templates directory in debian/rules.
 
- -- Robert James Clay <jame@rocasa.us>  Sun, 24 Jun 2012 08:15:37 -0400
+ -- Robert James Clay <jame@rocasa.us>  Sat, 07 Jul 2012 20:21:58 -0400
 
 ledgersmb (1.3.18-1) unstable; urgency=low
 
