--- a/debian/changelog
+++ b/debian/changelog
@@ -1,15 +1,16 @@
-ledgersmb (1.3.19-1~2) UNRELEASED; urgency=low
+ledgersmb (1.3.19-1) UNRELEASED; urgency=low
 
   * New upstream release.
     - Fixed discarded input/bad label on 1.2 upgrade screen. (Closes: #677098)
   * Changes to debian/patches/:
     - Updated 05_confdir.patch for the new fs_cssdir configuration item.
+    - Added 20_fs-cssdir-fix.patch to fix css directory transversal error.
   * Changes for debian/control:
     - Update the URL in the Vcs-Browser entry.
   * Changes for debian/ledgersmb.preinst:
     - Add setting of an old_version variable for use in the script.
     - Move templates/* to /var/lib/ledgersmb if necessary during upgrade.
-    - Remove old ledgersmb css and/or templates symbolic links as neccessary.
+    - Remove old ledgersmb css and/or templates symbolic links as necessary.
   * Changes for debian/ledgersmb.postinst:
     - Update source path for when creating working css & templates directories.
   * Remove setting symbolic link to /var/lib/ledgersmb/css in ledgersmb.links.
@@ -17,7 +18,7 @@ ledgersmb (1.3.19-1~2) UNRELEASED; urgency=low
     to ledgersmb.install.
   * Update path for the distribution templates directory in debian/rules.
 
- -- Robert James Clay <jame@rocasa.us>  Sat, 14 Jul 2012 17:45:27 -0400
+ -- Robert James Clay <jame@rocasa.us>  Sat, 28 Jul 2012 21:05:37 -0400
 
 ledgersmb (1.3.18-2) unstable; urgency=low
 
