--- a/ledger-smb/trunk/debian/changelog
+++ b/ledger-smb/trunk/debian/changelog
@@ -1,11 +1,10 @@
-ledgersmb (1.3.20-1) UNRELEASED; urgency=low
+ledgersmb (1.3.21~rc1-1~1) UNRELEASED; urgency=low
 
   * New upstream release. (Closes: #682274)
     - Fixed discarded input/bad label on 1.2 upgrade screen. (Closes: #677098)
     - Fixes for es_AR translation, duplicate keys removed. (Closes: #678281)
   * Changes to debian/patches/:
     - Updated 05_confdir.patch for the new fs_cssdir configuration item.
-    - Added 20_fs-cssdir-fix.patch to fix css directory transversal error.
   * Changes for debian/control:
     - Update the URL in the Vcs-Browser entry.
   * Changes for debian/ledgersmb.preinst:
@@ -19,7 +18,7 @@ ledgersmb (1.3.20-1) UNRELEASED; urgency=low
     to ledgersmb.install.
   * Update path for the distribution templates directory in debian/rules.
 
- -- Robert James Clay <jame@rocasa.us>  Mon, 30 Jul 2012 19:36:21 -0400
+ -- Robert James Clay <jame@rocasa.us>  Mon, 30 Jul 2012 19:58:36 -0400
 
 ledgersmb (1.3.18-2) unstable; urgency=low
 
