--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-ledgersmb (1.3.21~rc1-1~1) UNRELEASED; urgency=low
+ledgersmb (1.3.21~rc1-1) UNRELEASED; urgency=low
 
   * New upstream release. (Closes: #682274)
-    - Fixed discarded input/bad label on 1.2 upgrade screen. (Closes: #677098)
+    - Fix for System/Defaults denial of service advisory. (Closes: #683357)
     - Fixes for es_AR translation, duplicate keys removed. (Closes: #678281)
+    - Fixed discarded input/bad label on 1.2 upgrade screen. (Closes: #677098)
   * Changes to debian/patches/:
     - Updated 05_confdir.patch for the new fs_cssdir configuration item.
   * Changes for debian/control:
@@ -14,11 +15,11 @@ ledgersmb (1.3.21~rc1-1~1) UNRELEASED; urgency=low
   * Changes for debian/ledgersmb.postinst:
     - Update source path for when creating working css & templates directories.
   * Remove setting symbolic link to /var/lib/ledgersmb/css in ledgersmb.links.
-  * Move installation of css & templates directories from ledgersmb.examples
-    to ledgersmb.install.
+  * Move installation of css & templates directories using ledgersmb.examples
+    to using ledgersmb.install.
   * Update path for the distribution templates directory in debian/rules.
 
- -- Robert James Clay <jame@rocasa.us>  Mon, 30 Jul 2012 19:58:36 -0400
+ -- Robert James Clay <jame@rocasa.us>  Tue, 31 Jul 2012 20:42:58 -0400
 
 ledgersmb (1.3.18-2) unstable; urgency=low
 
