--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ledgersmb (1.3.21~rc1-1) UNRELEASED; urgency=low
+ledgersmb (1.3.21-1~1) UNRELEASED; urgency=low
 
   * New upstream release. (Closes: #682274)
     - Fix for System/Defaults denial of service advisory. (Closes: #683357)
@@ -19,7 +19,7 @@ ledgersmb (1.3.21~rc1-1) UNRELEASED; urgency=low
     to using ledgersmb.install.
   * Update path for the distribution templates directory in debian/rules.
 
- -- Robert James Clay <jame@rocasa.us>  Tue, 31 Jul 2012 20:42:58 -0400
+ -- Robert James Clay <jame@rocasa.us>  Sat, 04 Aug 2012 08:42:55 -0400
 
 ledgersmb (1.3.18-2) unstable; urgency=low
 
