--- a/ledger-smb/trunk/debian/NEWS
+++ b/ledger-smb/trunk/debian/NEWS
@@ -1,3 +1,12 @@
+ledgersmb (1.3.21-1) unstable; urgency=low
+
+  Empty language specific HTML, LaTeX, and Text template directories are not
+  installed with the package. In order to edit templates online for a particular
+  language, create the language specific directory like templates/demo/en_US
+  and you will then be able to edit a template for that language online.
+
+ -- Robert James Clay <jame@rocasa.us>  Sun,  5 Aug 2012 17:41:25 -0400
+
 ledgersmb (1.3.18-1) unstable; urgency=low
 
   Empty language specific HTML, LaTeX, and Text directories are no longer being
