--- a/ledger-smb/trunk/debian/changelog
+++ b/ledger-smb/trunk/debian/changelog
@@ -1,3 +1,9 @@
+ledgersmb (1.3.21-2~1) UNRELEASED; urgency=low
+
+  * Start packaging development for v1.3.21-2.
+
+ -- Robert James Clay <jame@rocasa.us>  Thu, 09 Aug 2012 09:25:07 -0400
+
 ledgersmb (1.3.21-1) unstable; urgency=low
 
   * New upstream release. (Closes: #682274)
