--- a/doc/release_notes
+++ b/doc/release_notes
@@ -1,7 +1,7 @@
 RELEASE NOTES
 LedgerSMB 1.3
 
-Latest Revision:  1.3.14, March 28, 2012.
+Latest Revision:  1.3.18, May 18, 2012.
 
 1:  Welcome to LedgerSMB
 
@@ -70,6 +70,10 @@ transactions are now separate.  By default, this means that a transaction now is
 entered first and then approved, and it only posts to the books when it is
 approved.  Bank reconciliation works on a similar principle.
 
+Note that in 1.3.x, AR/AP recurring transactions are saved rather than posted, 
+assuming that separation of duties is not disabled.  These are then approved or 
+deleted through the normal transaction approval workflows.
+
 Bank reconciliation also has been entirely redesigned to provide multi-user-safe
 workflows, and an ability to reasonably handle a much larger transaction load
 than was previously possible.  This includes a new user interface design, and a
@@ -99,12 +103,21 @@ assigned separately on different databases.
 
 2.6:  Fixed Asset Handling
 
-LedgerSMB 1.3 comes with a fixed asset module, meaning you can now define your assets,
-depreciate them, and dispose of them either entirely or partially.
+LedgerSMB 1.3 comes with a fixed asset module, meaning you can now define your 
+assets, depreciate them, and dispose of them either entirely or partially.
 
 The fixed asset system is designed to be extensible.  Currently only time-based, 
-straight-line depreciations are included.  However the system is designed to allow the 
-creation of new depreciation methods including time-based and production-based methods.
+straight-line depreciations are included.  However the system is designed to 
+allow the creation of new depreciation methods including time-based and 
+production-based methods.
+
+2.7:  Tax Changes
+
+As of LedgerSMB 1.3.16, a few changes were made to the Sales Tax API so that it 
+is easier to implement local tax rules.  This includes a minimum tax value, 
+exposed through  the user interface, and a maximum value which is not yet
+exposed.  The handling of these are module-specific.  The Simple tax module 
+treats these as operating on the subtotal of the invoice.
 
 3:  Known Issues
 
@@ -125,18 +138,34 @@ unless you are able to reverse on the same day.  If reversed on different days t
 gain/loss will be realized per the time when the payment was in effect and 
 not reversed.
 
-3.3:  Missing Annual Daily Straight Line Stored Procedure
+3.3:  Invoice unit column throws error when too long.
 
-Apparently the stored procedure for handling asset depreciation where the annual
-daily straight line method is selected is missing.  More typically, the annual
-monthly method is used.  For now, use that method instead.
+The unit column in the invoice is limited to 5 characters and will throw an SQl error when it is too long.  The error looks like:
 
-The differences between these methods do not result in financial differences
-over the course of a year.  Rather they affect how that annual depreciation is
-spread out over the year.  In daily, the year is divided into equal parts per
-day so we depreciate less in February than in August.  In monthly, we depreciate
-1/12th of the annual depreciation amount each month, so February and August show
-the same depreciation values.
+UPDATE invoice
+SET trans_id = ?,
+parts_id = ?,
+description = ?,
+qty = ?,
+sellprice = ?,
+fxsellprice = ?,
+discount = ?,
+allocated = ?,
+unit = ?,
+deliverydate = ?,
+project_id = ?,
+serialnumber = ?,
+precision = ?,
+notes = ?
+WHERE id = ?
+ERROR: value too long for type character varying(5)
+
+Due to compatibility issues, a fix for this has been included for 1.4, but is
+not planned to be backported for 1.3.
+
+If you need change the maximum length, you can:
+
+ALTER TABLE invoice SET unit TYPE varchar([length]);
 
 4:  Differences between LedgerSMB and SQL-Ledger(TM)
 
