--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,62 @@ Changelog for 1.3 Series
 Initial Release:  Monday, Oct 12 2011
 Supported Presently
 
+Changelog for 1.3.25
+* Fixed internal server errors on LedgerSMB->error() during new() (Chris T)
+* Fixed pricematrix rows not showing where pricegroups are used (Chris T)
+* Fixed missing grant in some cases on cr_coa_to_account (Chris T)
+* Fixed letterhead not showing up on emailed invoices (Chris T, h/t Kevin B)
+* Fixed blank screen on posting AR/IS/OE via FCGI (Chris T)
+* Fixed ECA's not distinct on parts screen and search (Chris T, 3550075)
+* Fixed error saving imported user with no existing db role (Chris T, 3559844)
+* Added ar-transation.csv and ap-transaction.csvn templates (Erik H)
+* Fixed blank screen processing recurring transactiosn in fcgi (Chris T)
+* Removed blank/unused Contact/Employee dropdown on shipping screen (Chris T)
+* Fixed internal server errors retrieving taxes with invalid dates (Chris T)
+* Fixed taxform "default reportable" checkbox not persisted (Chris T, 3581310)
+* Fixed labelling of vendor column on taxform reports (Chris T, 3581317)
+* Fixed terms of sales/purchase order not respected (Chris T, 3581337)
+* Added Perl equivalent to prepare-company-database.sh (Chris T, 3551127)
+* Fixed prepare-company-database.sh, test getopt version. (Havard S, 3551127)
+
+Chris T is Chris Travers
+Erik H is Erik Huelsmann
+Kevin B is Kevin Bailey
+Havard S is Havard Sorli
+
+Changelog for 1.3.24
+* Fixed error in msgid for "Add Language" (Havard S, h/t Robert C)
+* Moved Makefile.PL to version_from to reduce errors (Chris T, h/t Robert C)
+* Prompts added to configure_apache.sh (Berend T)
+* Corrected image not showable on html invoice (Chris T)
+* Fixed invoice date not printing on checks (Chris T, h/t Neil S)
+* Changed INSTALL to do make test, not of make install (Chris T h/t Kevin B)
+* Fixed framework for printing parts tumbnails in invoices (Chris T)
+* Upgrade now handles nulls in model field of makemodel (Chris T)
+* Fixed issue with comment in account.sql (Chris T)
+* Removed unused Subcontractor GIFI field (Chris T, h/t Erik H)
+* Changed upgrade screen to pull AR/AP numbers (Erik H)
+* Rebuild modules after upgrade, ensuring upgrade to latest version (Chris T)
+* Fixed credit limit usage calculations (Chris T, h/t Erik H)
+* Fixes to get LedgerSMB running clearly using FCGI (Chris T)
+* Fixed unapproved transactions showing up on aging reports (Chris T)
+* Fixed new window menu item not showing up (Erik H)
+* Fixed alignment issue on Contact screen on Chrome (Chris T)
+* Fixed cannot reconcile account with negative balance(Havard S, Erik H, h/t Nick P,3586757)
+* Documented cache_templates option in ledgersmb.conf (Chris T)
+* Fixed internal server error on plack with backups (Chris T)
+* Added add user button to setup.pl when LedgerSMB 1.3 db detected (Chris T)
+* Backup buttons do not show when no db found (Chris T)
+
+Berend T is Berend Tober
+Chris T is Chris Travers
+Erik H is Erik Huelsmann
+Havard S is Havard Sorli
+Kevin B is Kevin Bailey
+Neil S is Neil Smith
+Robert C is Robert James Clay
+Nick P is Nick Prater
+
 Changelog for 1.3.23
 * Fixed query string/stdin handling where both stdin and query string are set
 * Moved http error framework to use header methods (Chris T)
@@ -19,13 +75,14 @@ Changelog for 1.3.23
 * prepre_company_database.sh now only gives user mgmt rights (Berend T)
 * Fixed end date, etc not showing on summary list, (Chris T, 3556279)
 
-Berend T is Berent Tober
+Berend T is Berend Tober
 Chris T is Chris Travers
 Havard S is Havard Sorli
 Erik H is Erik Huelsmann
 Istvan P is Istvan Pongracz
 Brian W is Brian Wolf 
 Nick P is Nick Prater
+Robert C is Robert James Clay
 
 Changelog for 1.3.22
 * Fixed error when trying to save multiple make/models for a part (Chris T)
