Update LedgerSMB debian/changelog for UNRELEASED 1.3.41-1~2.

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,12 +6,14 @@ ledgersmb (1.3.41-1~2) UNRELEASED; urgency=medium
   * Rewrite the 'purge' stanza in the debian/ledgersmb.postrm script.
   * Use dh-linktree for embedded libjs-prototype and libjs-libjs-scriptaculous
     libraries.
+  * Only include the overrides for the 'custom' empty directories in the
+    ledgersmb.lintian-overrides.  
   * Add debian/ledgersmb.doc-base.database to register database information.
   * Correct package version for the mv_conffile stanzas in maintainer scripts.
   * Correct errors installing the httpd configuration files for Apache v2.2 and
     v2.4. (Closes: #749347)
 
- -- Robert James Clay <jame@rocasa.us>  Sun, 20 Jul 2014 12:40:57 -0400
+ -- Robert James Clay <jame@rocasa.us>  Sun, 27 Jul 2014 13:40:57 -0400
 
 ledgersmb (1.3.39-1) unstable; urgency=low
 
