--- a/doc/release_notes
+++ b/doc/release_notes
@@ -1,7 +1,7 @@
 RELEASE NOTES
 LedgerSMB 1.3
 
-Latest Revision:  1.3.41, July 2014
+Latest Revision:  1.3.42, August 2014
 
 1:  Welcome to LedgerSMB
 
@@ -239,6 +239,18 @@ same source, etc. on the transaction screen.  You must go through payment,
 payment reversal, or gl workflows.  Failure to do so may cause the payment to
 fail to be recognized by existing in-process reconciliation workflows.  If this
 happens, start the bank reconciliation over and the payment will be recognized.
+
+3.6:  Assemblies and COGS
+
+Assemblies and COGS have a couple of important shortcomings in 1.3 and before 
+which are fixed in 1.4.  The two important cases which can cause COGS to be misrecorded are:
+
+1.  BOM changes between when assembly is stocked and when assembly is sold
+2.  Selling assembly before all parts necessary to manufacture are in stock
+
+In both these cases, COGS can be misrecorded.  This is a problem going back to 
+the SQL-Ledger codebase.  Those who are doing significant work with assemblies 
+should move to 1.4 as soon as possible.
 
 4:  Differences between LedgerSMB and SQL-Ledger(TM)
 
