Update debian/changelog to v1.3.49.1~4 (UNRELEASED).

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,23 +1,25 @@
-ledgersmb (1.3.46-1) unstable; urgency=medium
+ledgersmb (1.3.46-1~4) UNRELEASED; urgency=medium
 
   * New upstream release. (Closes: #771822)
     - Fixes 'Duplicate message' errors in locale/po/hu.po. (Closes: #752063)
-  * Add texlive-xetex as a 'Suggests' in debian/control.
   * Add new Dutch debconf translation. (Closes: #767242)
   * Minor updates and corrections to debian/README.Debian.
-  * Add libjs-prototype & libjs-scriptaculous to Build-Depends.
   * Correct a copyright email address in the debian/copyright file.
   * Set permissions on ledgersmb/bin/gl.pl correctly in debian/rules.
   * Add a note regarding texlive-xetex to the debian/README.Debian file.
-  * Set Standards-Version to 3.9.6 in debian/control, no changes required.
   * The contrib_dir setting in 05_confdir.patch is only needed for Pg v9.1.
   * Remove the use of drop_statoverride function from the maintainer scripts.
+  * Changes in debian/control:
+    - Add texlive-xetex package as a 'Suggests'.
+    - Add libjs-prototype & libjs-scriptaculous to Build-Depends.
+    - Add dpkg equal to version 1.15.7.2 or above as a Pre-Depends.
+    - Set Standards-Version to 3.9.6 in debian/control, no changes required.
   * Use dh-linktree for embedded libjs-prototype and libjs-libjs-scriptaculous
     libraries.
   * Only include the overrides for the 'custom' empty directories in the
     ledgersmb.lintian-overrides.
 
- -- Robert James Clay <jame@rocasa.us>  Wed, 17 Dec 2014 05:08:48 -0500
+ -- Robert James Clay <jame@rocasa.us>  Wed, 28 Jan 2015 02:25:08 -0500
 
 ledgersmb (1.3.40-1) unstable; urgency=medium
 
